# Gemantria

./: .ci-trigger  .coverage  .cursorignore  .cursorindexingignore  .env  .env.example  .env.local  .env.protected  .envrc  .gitignore  .last_doctor.json  .mergify.yml  .pr_template_agent_revival.md  .pr_template_hints_envelope.md  .pre-commit-config.yaml  .verify_after_enrichment.sh  .verify_hints_envelope.sh  000-langgraph.md  002-gematria-rules.md  AGENTS.SEED.md  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DATA_FLOW_DIAGRAM.md  GEMANTRIA_MASTER_REFERENCE_v2.md  GEMINI.md  GPT_SYSTEM_PROMPT.md  Integrating Qwen3 Embedding and Reranker in the Gematria Pipeline.docx  LICENSE  MASTER_PLAN.md  MCP_BIBLESCHOLAR_REGISTRATION.md  Makefile  NEXT_STEPS.md  NON_UI_TOUCH.md  PROGRESS_SUMMARY.md  Prompting Guide for Our Core LLM models.md  README.md  README_FULL.md  RELEASES.md  (+114 more)
.codex/: config.example.toml
.cursor/: mcp.json  settings.json
.githooks/: pre-push
.github/: BRANCH_PROTECTION.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
agentpm/: AGENTS.md  config.py  gatekeeper.py  router.py
agents/: example_enrich.py
app/: page.tsx
archive/: 000-langgraph.md  001-two-db.md  001_two_db_safety.sql  002-gematria-rules.md  Improving the Bible QA RAG System with Advanced Techniques.docx  README.md  _evidence.graph_counts.txt  _evidence.webui_build_size.txt  check_mcp_status.py  extract_all.py  gemantria-cleanup-plan.md  golden_genesis_min.json  review.ndjson  run_pipeline.py  valid_cases.json
backups/: share_20251105_000529.tgz
components/: counts-panel.tsx  filter-panel.tsx  graph-preview.tsx  meta-panel.tsx  temporal-strip.tsx  toolbar.tsx
config/: AGENTS.md  book_plan.yaml  greek_to_hebrew_strongs.json  mini_experiments.yaml  rerank_blend.json
configs/: strongs_class_overrides.json  strongs_class_overrides.schema.json
db/: AGENTS.md
docs/: AGENTS.md  AI_LEARNING_SYSTEM_AGENTS.md  ARCHITECTURAL_ENHANCEMENTS_WALKTHROUGH.md  CURSOR_README.md  DECISION_LOG.md  DMS_BUGS_FOUND_2025-11-26.md  DMS_STABILIZATION_WALKTHROUGH.md  Geometric Deep Learning for Structured and Relational AI in Gemantria.rtf  HANDOFF_2025-12-01_github_recovery.md  INDEX.md  Improving the Bible QA RAG System with Advanced Techniques.rtf  MASTER_PLAN.md  NEXT_STEPS.template.md  OPS_BOOK_SMOKE.md  OPS_CALIBRATION.md  (+23 more)
(+4683 files in other folders)
