version = "0.0.3.dev0"

[project]
name = "gemantria"
version = "0.0.3.dev0"
description = "Gemantria gematria analysis pipeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pmagent = "pmagent.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
"tools/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true

[project.scripts]
pmagent = "pmagent.cli:main"
